# ESP32_Elvevator

./: .gitignore  CALIBRATION_GUIDE.md  CMakeLists.txt  COMPONENTS_LIST.md  INSTALLATION_DIAGRAM.md  LICENSE  README.md  TECHNICAL_REPAIR_GUIDE.md  WIFI_SETUP.md  check_motor_pins.py  components.json  decode_motor_response.py  level_converter_solution.md  listen_motor.py  pwm_debugger.py  read_serial.py  test_esp32_motor.py  test_motor_analog.py  test_motor_baud.py  test_motor_binary.py  test_motor_deterministic.py  test_motor_direct.py  test_motor_direct_12v.py  test_motor_final.py  test_motor_hard_diagnosis.py  test_motor_modbus_direct.py  test_motor_protocol.py  test_motor_pwm.py  test_motor_response.py  test_motor_start_stop.py  test_motor_windows.py  test_motor_with_load.py
main/: CMakeLists.txt  door_control.c  door_control.h  elevator_config.h  elevator_control.c  elevator_control.h  hx711.c  hx711.h  hx711_calibration_example.c  hx711_config.h  main.c  main_fixed.c  motor_control.c  motor_control.h  motor_control_bts7960.c  motor_control_bts7960.h  motor_control_fixed.c  motor_control_fixed.h  sensor_interface.c  sensor_interface.h  web_server.c  web_server.h  wifi_config.h  wifi_manager.c  wifi_manager.h
