idf_component_register(SRCS "main.c" 
                              "elevator_control.c"
                              "motor_control.c"
                              "door_control.c"
                              "sensor_interface.c"
                              "hx711.c"
                       INCLUDE_DIRS ".")

